scripts/nullaway/wpi/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8.txt
../wpi/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/StateMachine.java:32: error: [NullAway] dereferenced expression current is @Nullable
        current.exit(owner);
               ^
    (see http://t.uber.com/nullaway )
../wpi/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/StateMachine.java:34: error: [NullAway] dereferenced expression current is @Nullable
        current.enter(owner);
               ^
    (see http://t.uber.com/nullaway )
../wpi/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/StateMachine.java:44: error: [NullAway] dereferenced expression current is @Nullable
        return current.equals(state);
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/StateMachine.java:46: error: [NullAway] dereferenced expression current is @Nullable
        current.exit(owner);
               ^
    (see http://t.uber.com/nullaway )
../wpi/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/StateMachine.java:48: error: [NullAway] dereferenced expression current is @Nullable
        current.enter(owner);
               ^
    (see http://t.uber.com/nullaway )
../wpi/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/StateMachine.java:58: error: [NullAway] dereferenced expression current is @Nullable
        return current.equals(state);
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/StateMachine.java:32: error: [NullAway] dereferenced expression current is @Nullable
        current.exit(owner);
               ^
    (see http://t.uber.com/nullaway )
../wpi/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/StateMachine.java:34: error: [NullAway] dereferenced expression current is @Nullable
        current.enter(owner);
               ^
    (see http://t.uber.com/nullaway )
../wpi/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/StateMachine.java:44: error: [NullAway] dereferenced expression current is @Nullable
        return current.equals(state);
                      ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
9 errors
